[package]
name = "dll-syringe"
version = "0.9.0"
description = "A windows dll injection library written in rust."
readme = "README.md"
repository = "https://github.com/OpenByteDev/dll-syringe" 
homepage = "https://github.com/OpenByteDev/dll-syringe"
documentation = "https://docs.rs/dll-syringe"
license = "MIT"
authors = ["OpenByte <development.openbyte@gmail.com>"]
edition = "2021"
categories = []
keywords = ["dll-injection", "dll", "injector", "windows", "rpc"]

[dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "libloaderapi", "memoryapi", "wow64apiset"], default-features = false }
cstr = { version = "0.2", default-features = false }
sysinfo = { version = "0.23", default-features = false }
widestring = { version = "0.5.1", features = ["std", "alloc"], default-features = false }
path-absolutize = { version = "3.0", default-features = false }
stopwatch = { version = "0.0", default-features = false }
thiserror = { version = "1.0", default-features = false }
num_enum = { version = "0.5", default-features = false }
shrinkwraprs = { version = "0.3", default-features = false }
same-file = { version = "1.0", default-features = false }
konst = { version = "0.2", default-features = false }
u16cstr = { version = "0.3", default-features = false, optional = true }
iced-x86 = { version = "1.16", features = ["std", "code_asm"], default-features = false, optional = true }
bincode = { version = "1.3", default-features = false, optional = true }
serde = { version = "1.0", default-features = false, optional = true }

[target.'cfg(target_arch = "x86")'.dependencies]

[target.'cfg(target_arch = "x86_64")'.dependencies]
goblin = { version = "0.5", optional = true, default-features = false, features = ["std", "pe32"] }

[dev-dependencies]
platforms = { version = "2.0", default-features = false }
tempfile = { version = "3.3", default-features = false }

[features]
default = ["syringe", "into-x86-from-x64", "rpc"]
into-x86-from-x64 = ["syringe", "goblin"]
rpc = ["syringe", "bincode", "serde"]
process-memory = []
payload-utils = ["bincode", "serde"]
syringe = ["u16cstr", "iced-x86"]
full = ["syringe", "into-x86-from-x64", "rpc", "process-memory", "payload-utils"]
doc-cfg = ["full"]

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc", "i686-pc-windows-msvc"]
features = ["doc-cfg"]
