[package]
name = "dll-syringe"
version = "0.17.1"
description = "A windows dll injection library written in rust."
readme = "README.md"
repository = "https://github.com/OpenByteDev/dll-syringe" 
homepage = "https://github.com/OpenByteDev/dll-syringe"
documentation = "https://docs.rs/dll-syringe"
license = "MIT"
authors = ["OpenByte <development.openbyte@gmail.com>"]
edition = "2021"
resolver = "2"
categories = []
keywords = ["dll-injection", "dll", "injector", "windows", "rpc"]

[dependencies]
dll-syringe-macros = { path = "dll-syringe-macros", version = "0.1" }
winapi = { version = "0.3", features = [
    "processthreadsapi", "libloaderapi", "memoryapi", 
    "wow64apiset", "sysinfoapi", "winerror", 
    "handleapi", "psapi", "synchapi", "winbase"], default-features = false }
sysinfo = { version = "0.37", features = ["system"], default-features = false }
widestring = { version = "1.2", features = ["std", "alloc"], default-features = false }
path-absolutize = { version = "3.1", default-features = false }
stopwatch2 = { version = "2.0", default-features = false }
thiserror = { version = "2.0", default-features = false }
num_enum = { version = "0.7", default-features = false }
shrinkwraprs = { version = "0.3", default-features = false }
same-file = { version = "1.0", default-features = false }
konst = { version = "0.4", default-features = false }
fn-ptr = { version = "0.4", features = ["max-arity-12"], default-features = false }
iced-x86 = { version = "1.21", features = ["std", "code_asm", "op_code_info"], default-features = false, optional = true }
cu-bincode = { version = "2.0", features = ["std", "serde"], default-features = false, optional = true }
serde = { version = "1.0", default-features = false, optional = true }

[target.'cfg(target_arch = "x86")'.dependencies]

[target.'cfg(target_arch = "x86_64")'.dependencies]
goblin = { version = "0.10", optional = true, features = ["std", "pe32"], default-features = false }

[dev-dependencies]
current_platform = { version = "0.2", default-features = false }
tempfile = { version = "3.23", default-features = false }
 
[features]
default = ["syringe", "into-x86-from-x64", "rpc"]
into-x86-from-x64 = ["syringe", "goblin"]
rpc-core = ["syringe"]
rpc-raw = ["rpc-core"]
rpc-payload = ["rpc-raw", "cu-bincode", "serde"]
rpc = ["rpc-raw", "rpc-payload"]
process-memory = []
payload-utils = ["cu-bincode", "serde"]
syringe = ["iced-x86"]
full = ["into-x86-from-x64", "rpc", "process-memory", "payload-utils"]
doc-cfg = ["full"]

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc", "i686-pc-windows-msvc"]
features = ["doc-cfg"]
