[package]
name = "dll-syringe-bindings"
version = "0.17.1"
description = "C and C# bindings for dll-syringe."
license = "MIT"
edition = "2024"

[lib]
name = "dll_syringe"
crate-type = ["cdylib", "staticlib"]

[dependencies]
dll-syringe = { path = "..", default-features = false, features = ["syringe", "into-x86-from-x64"] }

[build-dependencies]
cbindgen = { version = "0.29", default-features = false, optional = true }
csbindgen = { version = "1.9", default-features = false, optional = true }

[profile.release]
codegen-units = 1
lto = true
strip = true
panic = "abort"

[features]
default = []
c = ["cbindgen"]
csharp = ["csbindgen"]
