[package]
name = "test_payload"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
winapi = { version = "0.3", features = ["minwindef"], default-features = false }
dll-syringe = { path = "../../..", features = ["payload-utils"], default-features = false }
serde = { version = "1.0", default-features = false }
cu-bincode = { version = "2.0", default-features = false }

[lib]
crate-type = ["dylib"]
